2015-03-06  Florian Weimer  <fweimer@redhat.com>

	* stdio-common/vfprintf.c (THOUSANDS_SEP_T): New typedef.
	(group_number, vfprintf): Use it.
	(JUMP_TABLE_BASE_LABEL): New preprocessor macro.
	(JUMP, REF): Use it.
	(WORK_BUFFER_SIZE): New enum constant.
	(process_arg, vfprintf): Use it.

2015-03-06  Rical Jasan  <ricaljasan@pacific.net>

	* manual/errno.texi (Error Messages): Complete example function
	by adding missing #define.
	(program_invocation_name): Add statement indicating GNU
	extension and reference which header file declares the variable.
	(program_invocation_short_name): Likewise.

2015-03-06  Mike Frysinger  <vapier@gentoo.org>

	* manual/errno.texi (Error Messages): Delete strerror ISO C89
	compatibility note.

2015-03-05  Roland McGrath  <roland@hack.frob.com>

	* Makeconfig (test-wrapper-env-only): New variable.
	* Rules (make-test-out): If variable $*-ENV-only is nonempty,
	then use that with $(test-wrapper-env-only) rather than using
	$(test-wrapper-env) $(run-program-env) $($*-ENV).

2015-03-05  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #18082]
	* sysdeps/alpha/dl-machine.h (elf_machine_type_class): Replace
	ELF_RTYPE_CLASS_NOCOPY with ELF_RTYPE_CLASS_COPY in comments.
	* sysdeps/arm/dl-machine.h (elf_machine_type_class): Likewise.
	* sysdeps/hppa/dl-machine.h (elf_machine_type_class): Likewise.
	* sysdeps/i386/dl-machine.h (elf_machine_type_class): Likewise.
	* sysdeps/ia64/dl-machine.h (elf_machine_type_class): Likewise.
	* sysdeps/m68k/dl-machine.h (elf_machine_type_class): Likewise.
	* sysdeps/microblaze/dl-machine.h (elf_machine_type_class):
	Likewise.
	* sysdeps/nios2/dl-machine.h (elf_machine_type_class): Likewise.
	* sysdeps/powerpc/powerpc32/dl-machine.h (elf_machine_type_class):
	Likewise.
	* sysdeps/powerpc/powerpc64/dl-machine.h (elf_machine_type_class):
	Likewise.
	* sysdeps/s390/s390-32/dl-machine.h (elf_machine_type_class):
	Likewise.
	* sysdeps/s390/s390-64/dl-machine.h (elf_machine_type_class):
	Likewise.