@@ -1,3 +1,11 @@
+2015-03-06  Samuel Thibault  <samuel.thibault@inria.fr>
+
+	Fix aio_error thread-safety.
+
+	* sysdeps/pthread/aio_error.c: New file
+	* sysdeps/pthread/aio_misc.c: Remove optimistic comment about
+	synchronization.
+
 2015-03-06  Florian Weimer  <fweimer@redhat.com>
 
 	* stdio-common/vfprintf.c (THOUSANDS_SEP_T): New typedef.
